# robot_autocalibration

./: .gitignore  CMakeLists.txt  README.md  build.sh  simulation.sh
include/: angle_local_parameterization.h  eigen_defs.h  estimators.hpp  loransac.h  normalize_angle.h  random_sampler.h  ransac.h  refinement.hpp  sampler.h  sim2.hpp
include/colmap/: camera_models.h  math.hpp  misc.h  pose.hpp  reconstruction.hpp  string.hpp  types.hpp
include/util/: alignment.h  csv.hpp  endian.hpp  io3d.hpp  logging.h  math.h  misc.hpp  string.hpp
scripts/: simulate.sh  simulation_experiment.sh
src/: calibrate.cpp  calibrate2.cpp  calibrate3d.cpp  closed_form.cpp  estimators.cpp  ground_calib.cpp  random_sampler.cpp  simulate.cpp  simulate3d.cpp  simulate_ground.cpp  support_measurement.cpp
tools/planar/: CMakeLists.txt  traj1.txt  traj2.txt
tools/planar/include/: args.hpp  io.hpp  io3d.hpp  macros.h  se2.hpp  svi_benchmark.hpp~
tools/planar/src/: planar.cpp
tools/sync/: 1.txt  2.txt  CMakeLists.txt  README.md  traj1_planar.txt  traj2_planar.txt
tools/sync/include/: io.hpp
tools/sync/src/: copy.cpp~  create_cameras.cpp~  evaluate.cpp~  sync.cpp
tools/trajectory_utils/: CMakeLists.txt  README.md
tools/trajectory_utils/src/: from2dto3d.cpp  scale_trajectory.cpp
